crates/tribute-front/tests/snapshots/expr_coverage__bool_literal_true.snap
---
source: crates/tribute-front/tests/expr_coverage.rs
expression: ir_text
---
core.module @test {
  tribute_control.func @yes() -> core.i1 convention(direct) {
      %0 = arith.const {value = true} : core.i1
      tribute_control.return %0
  }
}
