crates/tribute-front/tests/snapshots/expr_coverage__boolean_operators.snap
---
source: crates/tribute-front/tests/expr_coverage.rs
expression: ir_text
---
core.module @test {
  tribute_control.func @logic(%0: core.i1, %1: core.i1) -> core.i1 convention(cps) {
      %2 = scf.if %0 : core.i1 {
          %3 = arith.const {value = true} : core.i1
          scf.yield %3
      } {
          %4 = scf.if %1 : core.i1 {
              %5 = arith.const {value = false} : core.i1
              scf.yield %5
          } {
              %6 = arith.const {value = false} : core.i1
              scf.yield %6
          }
          scf.yield %4
      }
      tribute_control.return %2
  }
}
