crates/tribute-front/tests/snapshots/expr_coverage__bytes_literal.snap
---
source: crates/tribute-front/tests/expr_coverage.rs
expression: ir_text
---
core.module @test {
  tribute_control.func @data() -> core.bytes convention(direct) {
      %0 = adt.bytes_const {value = b"payload"} : core.bytes
      tribute_control.return %0
  }
}
