crates/tribute-front/tests/snapshots/expr_coverage__function_reference_as_value.snap
---
source: crates/tribute-front/tests/expr_coverage.rs
expression: ir_text
---
core.module @test {
  !t0 = tribute_control.func_sig<(core.i32) -> core.i32, {tribute.calling_convention = 0}>

  tribute_control.func @id(%0: core.i32) -> core.i32 convention(direct) {
      tribute_control.return %0
  }
  tribute_control.func @test_ref() -> core.i32 convention(cps) {
      %0 = tribute_control.func_ref {func_ref = @id} : !t0
      %1 = arith.const {value = 1} : core.i32
      %2 = tribute_control.call_indirect %0, %1 : core.i32
      tribute_control.return %2
  }
}
