crates/tribute-front/tests/snapshots/expr_coverage__lambda_as_argument.snap
---
source: crates/tribute-front/tests/expr_coverage.rs
expression: ir_text
---
core.module @test {
  !t0 = tribute_control.func_sig<(core.i32) -> core.i32, {tribute.calling_convention = 2}>

  tribute_control.func @apply(%0: !t0, %1: core.i32) -> core.i32 convention(cps) {
      %2 = tribute_control.call_indirect %0, %1 : core.i32
      tribute_control.return %2
  }
  tribute_control.func @test_lambda() -> core.i32 convention(direct) {
      %0 = tribute_control.lambda(%1: core.i32) -> core.i32 convention(cps) captures [] {
          tribute_control.return %1
      }
      %2 = arith.const {value = 1} : core.i32
      %3 = tribute_control.call %0, %2 {callee = @apply} : core.i32
      tribute_control.return %3
  }
}
