crates/tribute-front/tests/snapshots/expr_coverage__list_literals_use_shared_sequence_ops.snap
---
source: crates/tribute-front/tests/expr_coverage.rs
expression: ir_text
---
core.module @test {
  !t0 = tribute_control.func_sig<() -> tribute_rt.anyref, {tribute.calling_convention = 0}>

  tribute_control.func @empty() -> tribute_rt.anyref convention(direct) {
      %0 = list.empty {element_type = tribute_rt.anyref} : tribute_rt.anyref
      tribute_control.return %0
  }
  tribute_control.func @numbers() -> tribute_rt.anyref convention(direct) {
      %0 = arith.const {value = 1} : core.i32
      %1 = arith.const {value = 2} : core.i32
      %2 = arith.const {value = 3} : core.i32
      %3 = list.empty {element_type = core.i32} : tribute_rt.anyref
      %4 = list.prepend %2, %3 {element_type = core.i32} : tribute_rt.anyref
      %5 = list.prepend %1, %4 {element_type = core.i32} : tribute_rt.anyref
      %6 = list.prepend %0, %5 {element_type = core.i32} : tribute_rt.anyref
      tribute_control.return %6
  }
}
